Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3
-
1b319cab5c5a049093bf165f2909273005fc625c (qt/qtwebengine/dev)
Description
When redirecting from a custom scheme to another for a font-face in a CSS file it will fail to a blocked CORS policy. With the example given, it will fail with:
"js: Redirect from 'dummy:///Akronim-Regular.woff2' to 'redir:///Akronim-Regular.woff2' has been blocked by CORS policy: Redirect location 'redir:///Akronim-Regular.woff2' has a disallowed scheme for cross-origin requests."
whereas the index.html and test.css files are loaded fine. In the example to reproduce start it with:
dummy:///index.html
Attachments
Issue Links
- relates to
-
QTBUG-76258 When loading a XHR request from a qrc based file to www.google.com it will not succeed due to it failing on the CORS level
-
- Closed
-