FIXUP: Extend url library for WebEngine custom schemes

Fix blink::SecurityOrigin::ToString to match url::Origin::Serialize.

Task-number: QTBUG-75651
Change-Id: I46998fb0b4b9f7d537a3a99e2ee1fc5814bb9eec
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>